# tauri-plugin-serialport

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  package.json  pnpm-lock.yaml
.changes/: config.json  readme.md
.github/: FUNDING.yml
.github/workflows/: audit.yml
examples/serialport-test/: package.json  vite.config.ts
examples/serialport-test/src/: App.svelte  styles.css
examples/serialport-test/src-tauri/: Cargo.toml  tauri.conf.json
examples/serialport-test/src-tauri/capabilities/: default.json
examples/serialport-test/src-tauri/src/: main.rs
examples/tauri-app/: package.json
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: main.rs
examples/tauri-serialport/: package.json
examples/tauri-serialport/src/: App.svelte
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: available_ports.toml  bytes_to_read.toml  bytes_to_write.toml  cancel_read.toml  clear_break.toml  clear_buffer.toml  close_all.toml  read_binary.toml  read_carrier_detect.toml  read_clear_to_send.toml  read_data_set_ready.toml  read_ring_indicator.toml  set_baud_rate.toml  set_break.toml  set_data_bits.toml  set_flow_control.toml  set_parity.toml  set_stop_bits.toml  set_timeout.toml  start_listening.toml  stop_listening.toml  write_binary.toml  write_data_terminal_ready.toml  write_request_to_send.toml
permissions/schemas/: schema.json
src/: api.rs  commands.rs  desktop.rs  err.rs  error.rs  lib.rs  messages.rs  mobile.rs  serialport.rs  state.rs
src/serialport/: msg.rs  state.rs  types.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts  rollup.config.js  tsconfig.json
