[package]
name = "tauri-plugin-serialport"
version = "1.2.0"
authors = [ "47vigen" ]
description = ""
license = ""
repository = ""
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "2.0.0-alpha" }
serde = "1.0"
thiserror = "1.0"
serialport = "4.3.0"
