[package]
name = "tauri-plugin-serialport"
version = "2.0.0"
authors = [ "deid84" ]
license = "MIT OR Apache-2.0"
description = "Tauri v2 plugin for serial port communication"
repository = "https://github.com/deid84/tauri-plugin-serialport"
keywords = ["tauri", "tauri-plugin", "serialport", "serial"]
categories = ["hardware-support"]
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-serialport"


[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
serialport = "4.7.2"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }