[package]
name = "serialport-test"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tauri-plugin-serialport]
git = "https://github.com/deid84/tauri-plugin-serialport"
branch = "v2-migration"
